# akzonobel-agentbricks-workshop

./: .gitignore  README.md  USECASES.md  WORKSHOP_MASTER_PLAN.md
L100-foundations/: 00_sql_ai_functions.ipynb  01_agent_bricks_types.md  02_agent_evaluation.ipynb  03_short_term_memory.ipynb  L100_Architecture.drawio  README.md
L100-foundations/L100-agent-langgraph/: .env.example  .gitignore  README.md  app.yaml  databricks.yml  pyproject.toml
L100-foundations/L100-agent-langgraph/.claude/skills/quickstart/: skill.md
L100-foundations/L100-agent-langgraph/.claude/skills/run-locally/: skill.md
L100-foundations/L100-agent-langgraph/agent_server/: agent.py  sql_guard.py  start_server.py  utils.py
L100-foundations/L100-agent-langgraph/scripts/: quickstart.py  register_uc_function.sql
L200-capabilities/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  L200_Architecture.drawio  README.md  WORKSHOP_INSTRUCTIONS.md  agent_evaluation.ipynb  app.yaml  databricks.yml  pyproject.toml  requirements.txt
L200-capabilities/.claude/skills/add-tools/: skill.md
L200-capabilities/.claude/skills/add-tools/examples/: genie-space.yaml  uc-function.yaml
L200-capabilities/.claude/skills/agent-memory/: skill.md
L200-capabilities/.claude/skills/deploy/: skill.md
L200-capabilities/.claude/skills/discover-tools/: skill.md
L200-capabilities/.claude/skills/lakebase-setup/: skill.md
L200-capabilities/action_plane/: README.md  __init__.py  databricks_client.py  executor.py  guardrails.py  lakebase.py  model.py
L200-capabilities/action_plane/connectors/: __init__.py  _http.py  email.py  ticket.py
L200-capabilities/agent_server/: actions_api.py  agent.py  start_server.py  utils.py
L200-capabilities/scripts/: actions_schema_setup.py  app_deployment_script.ipynb  grant_app_access.py  lakebase_setup_script.ipynb
L200-capabilities/tests/: test_action_plane.py
L300-usecase/: .env.example  AGENTS.md  CLAUDE.md  L300_Architecture.drawio  README.md  WORKSHOP_INSTRUCTIONS.md  agent_evaluation_advanced.ipynb  app.yaml  databricks.yml  pyproject.toml  requirements.txt
L300-usecase/.claude/skills/migrate-from-model-serving/: skill.md
L300-usecase/.claude/skills/modify-agent/: skill.md
L300-usecase/action-center/: .env.example  .gitignore  README.md  app.yaml  requirements.txt  run_local.sh
L300-usecase/action-center/backend/: databricks_client.py  lakebase.py  main.py
L300-usecase/action-center/backend/action_plane/: __init__.py  guardrails.py  model.py
L300-usecase/action-center/backend/action_plane/connectors/: __init__.py  erp_po.py
L300-usecase/action-center/frontend/: index.html  package.json
L300-usecase/action-center/frontend/src/: App.tsx  api.ts  format.ts  styles.css
L300-usecase/action-center/frontend/src/components/: ActionTable.tsx  DetailPanel.tsx  GuardrailChips.tsx  LadderMeter.tsx  StatusBadge.tsx  Timeline.tsx
L300-usecase/agent_server/: __init__.py  actions_api.py  agent.py  databricks_client.py  lakebase.py  main.py  mcp_config.py  start_server.py  supervisor.py  utils.py
L300-usecase/agent_server/action_plane/: __init__.py  executor.py  guardrails.py  model.py
L300-usecase/agent_server/action_plane/connectors/: _http.py  crm.py  sharepoint.py  teams.py
L300-usecase/agent_server/subagents/: __init__.py  _base.py  _genie.py  commercial.py  commercial_space.md  finance.py  finance_space.md  scm.py  scm_space.md  text2sql.py
L300-usecase/docs/: architecture.md
L300-usecase/e2e-chatbot-app/: .env.example  README.md
L300-usecase/e2e-chatbot-app/client/: index.html
L300-usecase/e2e-chatbot-app/client/src/components/: app-sidebar.tsx  greeting.tsx  suggested-actions.tsx
L300-usecase/e2e-chatbot-app/tests/pages/: chat.ts
L300-usecase/scripts/: grant_app_access.py  seed_action_policies.py  setup_lakebase.py  smoke_supervisor.py  test_action_ladder.py
data/: README.md  generate_commercial.py  generate_docs.py  generate_finance.py  generate_scm.py  load_to_uc.py
data/setup/: commercial_space.md  finance_space.md  query_genie.py  scm_space.md  setup_genie_spaces.py  setup_vector_search.py
hackathon-starter-kit/: README.md  TRACK_TEMPLATE.md
hackathon-starter-kit/hackathon-hub/: .env.example  .gitignore  README.md  app.yaml  databricks.yml  eslint.config.js  package-lock.json  package.json
hackathon-starter-kit/starter-prompts/: 01-finance-controlling.md  02-multi-domain-supervisor.md  03-procurement-contracts.md  04-access-provisioning.md  05-forecast-planner-mmf.md  06-pricing-quote-generation.md  07-supply-chain-control-tower.md  08-ai-governance-policy.md  09-commercial-action.md  10-enterprise-knowledge-assistant.md  11-doc-extraction-cluster.md
vocareum-course/: README-project.md
vocareum-course/course-image/: README.md
vocareum-course/courseware/: 01 - Setup Check.ipynb  99 - Wrap Up.ipynb
vocareum-course/docs/: README.md
vocareum-course/scripts/: build_bundle.py  lab_end.py  lab_setup.py  user_setup.py  workspace_init.py
(+52 files in other folders)
