[project]
name = "akzo-l200-capabilities"
version = "0.1.0"
description = "AkzoNobel Agent Bricks workshop — L200 coded agent (OpenAI Agents SDK) with UC-function tools, an MCP server, Lakebase memory, and the Action Plane."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-openai[memory]>=0.13.0",
    "databricks-agents>=1.9.3",
    "databricks-ai-bridge>=0.5.0",
    "databricks-sdk>=0.70.0",
    "mlflow>=3.10.0",
    "openai-agents>=0.4.1",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.2.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server", "action_plane", "scripts"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pytest>=9.0.2",
    "nest-asyncio>=1.6.0",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
start-app = "scripts.start_app:main"
start-server = "agent_server.start_server:main"
discover-tools = "scripts.discover_tools:main"
preflight = "scripts.preflight:main"
actions-setup = "scripts.actions_schema_setup:main"
