[project]
name = "akzo-supervisor"
version = "0.1.0"
description = "AkzoNobel L300 Multi-domain Supervisor — LangGraph supervisor over Finance / SCM / Commercial Genie spaces, with the full Action Plane."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-langchain[memory]>=0.17.0",
    "databricks-sdk>=0.79.0",
    "databricks-agents>=1.9.3",
    "mlflow>=3.10.0",
    "langgraph>=1.0.9",
    "langchain-mcp-adapters>=0.2.1",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.2.1",
    "uuid-utils>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pytest>=9.0.2",
]

[project.scripts]
start-server = "agent_server.start_server:main"
setup-lakebase = "scripts.setup_lakebase:main"
seed-policies = "scripts.seed_action_policies:main"
smoke-supervisor = "scripts.smoke_supervisor:main"
test-action-ladder = "scripts.test_action_ladder:main"
